k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-mysql
  namespace: petapp
  labels:
    app: petclinic
    tier: database
spec:
  selector:
    matchLabels:
      app: petclinic
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: petclinic
        tier: database
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
